# html5-parser

./: MANIFEST.in  README.rst  benchmark.py  genattrs.py  genencodings.py  gentags.py  publish.py  pyproject.toml  run_tests.py  setup.cfg  setup.py  unix_build.py
.github/workflows/: ci.py  ci.yml  package-release.py  package-release.yml
gumbo/: parser.c
src/html5_parser/: __init__.py
test/: __init__.py  adapt.py  basic.py  html5lib_adapter.py  malformed.py  namespace.py  soup.py
